proba podpiecia firebase bez bledow

--- a/dataconnect/dataconnect.yaml
+++ b/dataconnect/dataconnect.yaml
@@ -1,5 +1,5 @@
 specVersion: "v1"
-serviceId: "flutterapplication1"
+serviceId: "android"
 location: "us-east4"
 schema:
   source: "./schema"
@@ -7,7 +7,7 @@ schema:
     postgresql:
       database: "fdcdb"
       cloudSql:
-        instanceId: "flutterapplication1-fdc"
+        instanceId: "android-fdc"
         # schemaValidation: "STRICT"     # STRICT mode makes Postgres schema match Data Connect exactly.
         # schemaValidation: "COMPATIBLE" # COMPATIBLE mode makes Postgres schema compatible with Data Connect.
 connectorDirs: ["./example"]
