--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
+  flutter_launcher_icons: ^0.14.1
+  flutter_native_splash: ^2.4.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -60,6 +62,26 @@ flutter:
   assets:
     - pin-map.jpeg
     - logowanie-ikona.jpeg
+    - chomik-loading.jpeg
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "logowanie-ikona.jpeg"
+  min_sdk_android: 21
+  adaptive_icon_background: "#1976D2"
+  adaptive_icon_foreground: "logowanie-ikona.jpeg"
+
+flutter_native_splash:
+  color: "#1976D2"
+  image: "chomik-loading.jpeg"
+  android: true
+  ios: true
+  android_gravity: center
+  ios_content_mode: center
+  android_12:
+    color: "#1976D2"
+    image: "chomik-loading.jpeg"
 
   # To add assets to your application, add an assets section, like this:
   # assets:
