--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cloud_firestore: ^5.4.4
   flutter_dotenv: ^5.1.0
   mapbox_maps_flutter: ^2.3.0
+  geolocator: ^13.0.2
 
 dev_dependencies:
   flutter_test:
